# vvildan

./: .github1.txt.swp  .gitignore  .pre-commit-config.yaml  README.md  bot.py  database.py  dekorator.py  github1.txt  my_keyboards.py  pyproject.toml  requirenments.txt
alembic/: env.py
alembic/versions/: 15bfa61f3c92_added_account_table.py  1bdaece42736_.py  2cfa88c52e15_created_at_func_now.py  4321d1a1b6dc_optional_str.py  52eac5d9ca08_created_by.py  5a1e30bed57c_optional_city_id.py  956ac588043d_delete_created_by_country.py  95ec42271098_init.py  98e141bbc3fb_.py  9e836722a270_sender_requests.py  a29d88f3d720_.py  aebce7cab383_изменение_таблицы.py  d173eb5d07b6_init.py  e86eca49b998_.py  e897772ccd13_usercity.py  eabbe29047e9_notifay_about_request.py  f4b7ef442491_create_tables.py  fd53604bfec3_countries_and_cities.py
src/: bot.py  database.py  dataclass  my_keyboards.py  асинхрон
