[tool.poetry]
name = "courier-bot"
version = "0.1.0"
description = ""
authors = ["bikmetle <hamid-nv@vivaldi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.4.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.ruff]
select = ["E", "F"]
ignore = ["E501", "E741"]
